[package]
name = "backend"
version = "2.2.0"
edition = "2024"
authors = ["UberMetroid <admin@ubermetroid.com>"]
license = "Apache-2.0"
repository = "https://github.com/UberMetroid/Trace"
homepage = "https://github.com/UberMetroid/Trace"
description = "Axum backend service for Trace."
readme = "../README.md"

[dependencies]
shared-assets = { path = "../frontend/Assets/shared-assets/shared-rust" }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
regex = "1.10"
sha2 = "0.11"
ipnet = "2.9"

