[package]
name = "backend"
version = "1.0.8"
edition = "2024"
authors = ["studio2201"]
license = "Apache-2.0"
repository = "https://github.com/studio2201/trace"
homepage = "https://github.com/studio2201/trace"
description = "Axum backend service for Trace."
readme = "../README.md"

[dependencies]
shared-core = { git = "https://github.com/UberMetroid/shared-assets.git", tag = "v3.0.29" }
shared-backend = { git = "https://github.com/UberMetroid/shared-assets.git", tag = "v3.0.29" }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }
axum = "0.8"
tower-http = { version = "0.7", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
regex = "1.10"
sha2 = "0.11"
ipnet = "2.9"
# Used directly by `auth.rs` for PIN comparison. The same crate is
# already pulled in transitively by `shared-assets`, but we declare it
# explicitly here so a future shared-assets refactor doesn't silently
# break our use of it.
constant_time_eq = "0.5"

