[package]
name = "frontend"
version = "1.0.2"
edition = "2024"
authors = ["UberMetroid <admin@ubermetroid.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/UberMetroid/RustWho"
homepage = "https://github.com/UberMetroid/RustWho"
description = "Yew frontend application for RustWho."
readme = "../README.md"

[dependencies]
yew = { version = "0.23", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.7"
gloo-utils = "0.3"
gloo-timers = { version = "0.4", features = ["futures"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "HtmlSelectElement",
  "Window",
  "Document",
  "Event",
  "InputEvent",
  "MouseEvent",
  "KeyboardEvent",
  "FocusEvent",
  "Location",
  "Navigator",
  "Storage",
  "Headers",
  "Response",
  "MediaQueryList"
]
